# Money-Bhai-Bot

./: .gitignore  README.md  Test Cases.gdoc  bot_setup.py  config.py  dashboard.py  firebase.json  llm_handler.py  main.py  money_bhai.db  pubspec.yaml  pyproject.toml  requirements.txt  test-report.json  test_dashboard.py
android/app/: build.gradle.kts  google-services.json
db/: database.py  db_writer.py  models.py
handlers/: callbacks.py  commands.py  message_handler.py
handlers/conversations/: add_txn.py  analysis.py  delete_txn.py  edit_txn.py  manage_wallets.py  onboarding.py  states.py
integration_test/: login_flow_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/models/: transaction_model.dart  wallet_model.dart
lib/screens/: accounts_screen.dart  add_transaction_screen.dart  auth_gate.dart  chat_screen.dart  create_wallet_screen.dart  edit_transaction_screen.dart  forgot_password_screen.dart  home_screen.dart  import_messages_screen.dart  login_screen.dart  signup_screen.dart  wallet_configuration_screen.dart
lib/services/: firebase_auth_service.dart  firestore_service.dart  mock_database_service.dart
lib/utils/: category_data.dart
linux/: CMakeLists.txt
money_bhai_bot.egg-info/: PKG-INFO  SOURCES.txt
test/: widget_test.dart
tests/: test_addition_flows.py  test_db_writer.py  test_llm_handler.py  test_onboarding_flows.py
utils/: formatting.py  plotting.py  telegram_helpers.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  (+1 more)
(+7 files in other folders)
