[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "money_bhai_bot"
version = "0.1.0"
description = "A personal finance Telegram bot."
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
# This tells the project to find your 'app' and 'db' folders
where = ["."]
include = ["app*", "db*"]

[tool.pytest.ini_options]
# This explicitly tells pytest where your source code is
pythonpath = "."